fix: adjust margin-top for contact top control on mobile for better spacing

--- a/FrontEndPortfolio/src/components/Contact/Contact.css
+++ b/FrontEndPortfolio/src/components/Contact/Contact.css
@@ -161,7 +161,7 @@
 
 @media screen and (max-width: 900px) {
   .contact__top-control {
-    margin-top: 2.2rem;
+    margin-top: 3.2rem;
     margin-bottom: 2.2rem;
   }
 
